--- a/themes/oceanic-zen/templates/index.html
+++ b/themes/oceanic-zen/templates/index.html
@@ -9,6 +9,25 @@
         <meta name="description" content="{{ config.description }}">
         {% endif %}
 
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="{{ config.base_url }}">
+        <meta property="og:title" content="{{ config.title }}">
+        {% if config.description -%}
+        <meta property="og:description" content="{{ config.description }}">
+        {% endif %}
+        {% if config.extra.social_image -%}
+        <meta property="og:image" content="{{ config.extra.social_image }}">
+        {% endif %}
+
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:title" content="{{ config.title }}">
+        {% if config.description -%}
+        <meta name="twitter:description" content="{{ config.description }}">
+        {% endif %}
+        {% if config.extra.social_image -%}
+        <meta name="twitter:image" content="{{ config.extra.social_image }}">
+        {% endif %}
+
         <title>{% block title %}{{ config.title }}{% endblock title %}</title>
 
         <script>
@@ -47,11 +66,13 @@
                         {% set index = get_section(path="_index.md") %}
                         {% for s in index.subsections %}
                             {% set subsection = get_section(path=s) %}
+                            {% if subsection.title != "Other" %}
                             <li class="nav">
                                 <a itemprop="url" href="{{ subsection.permalink | safe}}">
                                     <span itemprop="name">{{ subsection.title }}</span>
                                 </a>
                             </li>
+                            {% endif %}
                         {% endfor %}
                         {% set books = get_page(path="about/books.md") %}
                         {% set projects = get_page(path="about/projects.md") %}
