--- a/themes/oceanic-zen/templates/page.html
+++ b/themes/oceanic-zen/templates/page.html
@@ -5,9 +5,12 @@
     <div itemprop="headline">
         <h1>{{ page.title }}</h1>
         <div class="border"></div>
-        <time datetime="{{ page.date | date(format="%Y-%m-%d") }}" class="date" itemprop="datePublished">
-            {{ page.date | date(format="%d %b %Y") }}
-        </time>
+        <div class="post-meta">
+            <time datetime="{{ page.date | date(format="%Y-%m-%d") }}" class="date" itemprop="datePublished">
+                {{ page.date | date(format="%d %b %Y") }}
+            </time>
+            <span class="post-author">{{ page.author | default(value=config.extra.author) }}</span>
+        </div>
     </div>
     <div itemprop="articleBody">
         {{ page.content | safe }}
