--- a/themes/oceanic-zen/templates/page.html
+++ b/themes/oceanic-zen/templates/page.html
@@ -1,7 +1,7 @@
 {% extends "index.html" %}
 
 {% block main %}
-<article itemscope itemtype="http://schema.org/BlogPosting">
+<article itemscope itemtype="http://schema.org/BlogPosting" class="post{% if page.extra.class %} {{ page.extra.class }}{% endif %}">
     <div itemprop="headline">
         <h1>{{ page.title }}</h1>
         <div class="border"></div>
