--- a/themes/oceanic-zen/templates/index.html
+++ b/themes/oceanic-zen/templates/index.html
@@ -9,6 +9,7 @@
         <meta name="description" content="{{ config.description }}">
         {% endif %}
 
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fontsource/atkinson-hyperlegible-next@5.2.7/index.css">
         <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css">
 
         <meta property="og:type" content="website">
