--- a/themes/oceanic-zen/templates/index.html
+++ b/themes/oceanic-zen/templates/index.html
@@ -11,6 +11,7 @@
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fontsource/atkinson-hyperlegible-next@5.2.7/index.css">
         <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css">
+        <script data-goatcounter="https://yelladev.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 
         <meta property="og:type" content="website">
         <meta property="og:url" content="{{ config.base_url }}">
