--- a/themes/oceanic-zen/templates/section.html
+++ b/themes/oceanic-zen/templates/section.html
@@ -15,6 +15,12 @@
     {% if section.pages and section.title != "About" %}
         <h1>{{ section.title }}</h1>
         <div class="border"></div>
+        {% if section.title == "Blog" %}
+        <a class="rss-ribbon" href="{{ get_url(path="blog/atom.xml", trailing_slash=false) }}" aria-label="RSS Feed">
+            <i class="bx bx-rss" aria-hidden="true"></i>
+            <span>RSS</span>
+        </a>
+        {% endif %}
         <ul>
         {% for p in section.pages %}
             <li>
