--- a/themes/oceanic-zen/templates/section.html
+++ b/themes/oceanic-zen/templates/section.html
@@ -1,63 +1,85 @@
 {% extends "index.html" %}
 
 {% block main %}
-    {% if section.content %}
-        <article itemscope itemtype="http://schema.org/BlogPosting">
-            <div itemprop="headline">
-                <h1>{{ section.title }}</h1>
-                <div class="border"></div>
-            </div>
-            <div itemprop="articleBody">
-                {{ section.content | safe }}
-            </div>
-        </article>
-    {% endif %}
-    {% if section.pages and section.title != "About" %}
+    {% if section.title == "Photography" %}
         <h1>{{ section.title }}</h1>
         <div class="border"></div>
-        {% if section.title == "Blog" %}
-        <a class="rss-ribbon" href="{{ get_url(path="blog/atom.xml", trailing_slash=false) }}" aria-label="RSS Feed">
-            <i class="bx bx-rss" aria-hidden="true"></i>
-            <span>RSS</span>
-        </a>
+        {% if section.extra.intro %}
+            <div class="section-intro">{{ section.extra.intro }}</div>
         {% endif %}
-        <ul class="post-list">
-        {% for p in section.pages %}
-            {% set preview_src = "" %}
+        {% if section.extra.photos and section.extra.photos | length > 0 %}
+            <div class="photo-wall">
+                {% for photo in section.extra.photos %}
+                    <figure class="photo-bleed">
+                        <img src="{{ photo.src }}" alt="{{ photo.alt | default(value=section.title) }}" loading="lazy">
+                        {% if photo.caption %}
+                            <figcaption>{{ photo.caption }}</figcaption>
+                        {% endif %}
+                    </figure>
+                {% endfor %}
+            </div>
+        {% else %}
+            <p>Gallery coming soon.</p>
+        {% endif %}
+    {% else %}
+        {% if section.content %}
+            <article itemscope itemtype="http://schema.org/BlogPosting">
+                <div itemprop="headline">
+                    <h1>{{ section.title }}</h1>
+                    <div class="border"></div>
+                </div>
+                <div itemprop="articleBody">
+                    {{ section.content | safe }}
+                </div>
+            </article>
+        {% endif %}
+        {% if section.pages and section.title != "About" %}
+            <h1>{{ section.title }}</h1>
+            <div class="border"></div>
             {% if section.title == "Blog" %}
-                {% if p.extra.preview_image %}
-                    {% set preview_src = p.extra.preview_image %}
-                {% else %}
-                    {% set parts = p.content | split(pat='src="') %}
-                    {% if parts | length > 1 %}
-                        {% set preview_src = (parts[1] | split(pat='"') | first) %}
+            <a class="rss-ribbon" href="{{ get_url(path="blog/atom.xml", trailing_slash=false) }}" aria-label="RSS Feed">
+                <i class="bx bx-rss" aria-hidden="true"></i>
+                <span>RSS</span>
+            </a>
+            {% endif %}
+            <ul class="post-list">
+            {% for p in section.pages %}
+                {% set preview_src = "" %}
+                {% if section.title == "Blog" %}
+                    {% if p.extra.preview_image %}
+                        {% set preview_src = p.extra.preview_image %}
                     {% else %}
-                        {% set parts = p.content | split(pat="src='") %}
+                        {% set parts = p.content | split(pat='src="') %}
                         {% if parts | length > 1 %}
-                            {% set preview_src = (parts[1] | split(pat="'") | first) %}
+                            {% set preview_src = (parts[1] | split(pat='"') | first) %}
+                        {% else %}
+                            {% set parts = p.content | split(pat="src='") %}
+                            {% if parts | length > 1 %}
+                                {% set preview_src = (parts[1] | split(pat="'") | first) %}
+                            {% endif %}
                         {% endif %}
                     {% endif %}
                 {% endif %}
-            {% endif %}
-            <li class="post-card">
-                <a class="post-card__link" href="{{ p.permalink | safe}}">
-                    {% if section.title == "Blog" and preview_src != "" %}
-                        <img
-                            class="post-card__image"
-                            src="{{ preview_src }}"
-                            alt="{{ p.extra.preview_image_alt | default(value=p.title) }}"
-                            loading="lazy"
-                        >
-                    {% endif %}
-                    <div class="post-card__content">
-                        <div class="post-card__title">{{ p.title }}</div>
-                        {% if section.title == "Blog" and p.date %}
-                        <span class="post-date">{{ p.date | date(format="%b %d, %Y") }}</span>
+                <li class="post-card">
+                    <a class="post-card__link" href="{{ p.permalink | safe}}">
+                        {% if section.title == "Blog" and preview_src != "" %}
+                            <img
+                                class="post-card__image"
+                                src="{{ preview_src }}"
+                                alt="{{ p.extra.preview_image_alt | default(value=p.title) }}"
+                                loading="lazy"
+                            >
                         {% endif %}
-                    </div>
-                </a>
-            </li>
-        {% endfor %}
-        </ul>
+                        <div class="post-card__content">
+                            <div class="post-card__title">{{ p.title }}</div>
+                            {% if section.title == "Blog" and p.date %}
+                            <span class="post-date">{{ p.date | date(format="%b %d, %Y") }}</span>
+                            {% endif %}
+                        </div>
+                    </a>
+                </li>
+            {% endfor %}
+            </ul>
+        {% endif %}
     {% endif %}
 {% endblock main %}
