Use Polly audio for Listen button

--- a/themes/oceanic-zen/sass/theme.scss
+++ b/themes/oceanic-zen/sass/theme.scss
@@ -916,6 +916,10 @@ article.post li {
     color: var(--text);
 }
 
+.post-audio {
+    display: none;
+}
+
 .rss-ribbon {
     display: inline-flex;
     align-items: center;
